<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CRUD.UpdateProductActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center"
        android:text="@string/tv_Titulo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/codigoProdutoAtt"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/hint_codigo"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/estoqueProdutoAtt"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/hint_estoque"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricaoProdutoAtt" />

    <EditText
        android:id="@+id/descricaoProdutoAtt"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_descricao"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeProdutoAtt" />

    <EditText
        android:id="@+id/nomeProdutoAtt"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/hint_nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codigoProdutoAtt" />

    <Button
        android:id="@+id/btn_BackUpdate_CRUD"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:text="@string/btn_Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Update_CRUD" />

    <Button
        android:id="@+id/btn_Update_CRUD"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:text="@string/btn_Update_CRUD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estoqueProdutoAtt" />
</androidx.constraintlayout.widget.ConstraintLayout>