<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="355dp"
        android:layout_height="355dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="112dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_RegisterProduct"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="5dp"
                android:text="@string/btn_RegisterProduct" />

            <Button
                android:id="@+id/btn_ListProduct"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="5dp"
                android:text="@string/btn_ListProduct" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_UpdateProduct"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="5dp"
                android:text="@string/btn_UpdateProduct" />

            <Button
                android:id="@+id/btn_DeleteProduct"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="5dp"
                android:text="@string/btn_DeleteProduct" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>